# FINA

./: .gitignore  README.md  render.yaml
fina-agent-engine/: .dockerignore  Dockerfile  README.md  diagnose_network.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_phase1.py  verify_phase2.py
fina-agent-engine/app/: __init__.py
fina-agent-engine/app/api/: __init__.py  routes.py
fina-agent-engine/app/core/: __init__.py  config.py  config_loader.py  dependencies.py  exceptions.py  logger.py  settings.py
fina-agent-engine/app/graph/: __init__.py  builder.py  guardrails.py  nodes.py  state.py
fina-agent-engine/app/prompts/: __init__.py  system_prompt.yaml
fina-agent-engine/app/schemas/: __init__.py  agent_schemas.py  approval_request.py  requests.py  responses.py
fina-agent-engine/app/service/: __init__.py  agent_tools.py  approval_service.py  auth_service.py  chat_service.py  ingestion_service.py  mcp_client.py  thread_service.py
fina-agent-engine/tests/: conftest.py  test_agent_tools.py  test_agent_tools_invocation.py  test_api.py  test_approval_service.py  test_config_loader.py  test_core.py  test_graph.py  test_graph_lifecycle.py  test_guardrails.py  test_ingestion_service.py  test_logger.py  test_main.py  test_mcp_client.py  test_nodes.py  test_schemas.py  test_services.py  test_settings.py  test_thread_service.py
fina-agent-engine/tests/evals/: benchmarks.jsonl  conftest.py  test_adversarial_scenarios.py  test_behavior_invariants.py  test_guardrail_eval.py  test_guardrail_stream.py
fina-agent-front/: package-lock.json  package.json
fina-agent-front/src/app/: globals.css  layout.tsx  page.tsx
fina-agent-front/src/components/dashboard/: ChatInterface.tsx  Dashboard.tsx  HITLPanel.tsx  IngestionPanel.tsx  PortfolioOverview.tsx
fina-agent-front/src/hooks/: useAuth.tsx
fina-agent-front/src/services/: api.ts
fina-mcp-server/: Dockerfile  README.md  main.py  requirements.txt
fina-mcp-server/src/: logger.py  server.py
fina-mcp-server/src/database/: db_manager.py
fina-mcp-server/src/tests/: test_mcp_server.py
fina-orchestrator/: .env.example  docker-compose.yml
(+2 files in other folders)
